MCR-3274 Enable PMD rule ProperLogger